--- a/README.org
+++ b/README.org
@@ -16,7 +16,7 @@ syvl.org
 with builtins; with (import (fetchGit {
     url = "https://github.com/<<username>>/<<username>>";
     ref = "main";
-})).legacyPackages.${currentSystem} mkShell {
+})).legacyPackages.${currentSystem}; mkShell {
     buildInputs = [ PythonPackages.bakery yadm git gnumake fd emacs gnupg git-crypt tailscale tailapi pass ];
 }
 #+end_src
