--- a/README.org
+++ b/README.org
@@ -36,7 +36,7 @@ with builtins; with (import (fetchGit {
 #[69509b6b-2e23-4c82-bbe3-0ec2a7dd916e[
 #! nix-shell shell
 #! nix-shell -i hy
-#! nix-shell --option tarbal-ttl 0
+#! nix-shell --option tarball-ttl 0
 ]69509b6b-2e23-4c82-bbe3-0ec2a7dd916e]
 #+end_src
 
