--- a/README.org
+++ b/README.org
@@ -117,8 +117,6 @@ Adapted from [[https://stackoverflow.com/users/180464/eric-frederich][eric.frede
                                  "remote" True
                                  "force" True }
                 bootstrap-path (Path f"{home}/.config/yadm/bootstrap")
-                bootstrap-bin (do (chmod-bootstrap bootstrap-path)
-                                  (bakery :program- bootstrap-path))
                 reponame "<<reponame>>"
                 user-repo (dyes? user-repo f"{home}/{reponame}")
                 primary-repo f"{primary-home}/{reponame}"
@@ -196,7 +194,8 @@ Adapted from [[https://stackoverflow.com/users/180464/eric-frederich][eric.frede
                               (make :f f"{worktree}/.emacs.d/makefile" "soft-init")))))
               (nixos-generate-config :run True)
               (if bootstrap
-                  (bootstrap-bin worktree))
+                  (do (chmod-bootstrap bootstrap-path)
+                      ((bakery :program- bootstrap-path) worktree)))
               (if zfs-root
                   (do (.set zfs :snapdir "visible" dataset :m/run True)
                       (.inherit zfs :r True "snapdir" dataset :m/run True))))))
