--- a/README.org
+++ b/README.org
@@ -131,10 +131,18 @@ Adapted from [[https://stackoverflow.com/users/180464/eric-frederich][eric.frede
                 tailscale-api-command-bin (bakery (get tailscale-api-command-split 0))
                 tailscale-api-command-args (cut tailscale-api-command-split 1 None) ]
               (if import-yubikey
-                  (for [line (gpg :card-status True :m/str True :m/split "\n" :m/run True)]
-                       (if (in "URL" line)
-                           (do (gpg :fetch (get (.split line ": ") 1))
-                               (break))))
+                  (do (while True
+                             (try (print "The gnupg card status:\n")
+                                  (gpg :card-status True :m/dazzle True)
+                                  (print)
+                                  (except [e SystemError]
+                                          (print f"Sorry; your yubikey either isn't inserted or something else happened! When all set up, please press enter; in the meantime, here is the error: {(repr e)}")
+                                          (input))
+                                  (else (break))))
+                      (for [line (gpg :card-status True :m/str True :m/split "\n")]
+                           (if (in "URL" line)
+                               (do (gpg :fetch (get (.split line ": ") 1))
+                                   (break)))))
                   (if (setx gpg-key (ino? "Path to gpg private key: "))
                       (gpg :m/subcommand "import" gpg-key)
                       (raise (ValueError "Sorry; a gpg key is necessary to continue!"))))
