--- a/README.org
+++ b/README.org
@@ -1,238 +1,21 @@
-#+setupfile: ./settings/README.org
-
-* CNAME
-:PROPERTIES:
-:ID:       b2bb02de-0ced-4df2-a6f5-2734845e163f
-:CUSTOM_ID:       b2bb02de-0ced-4df2-a6f5-2734845e163f
-:END:
-
-#+begin_src text :tangle (meq/tangle-path)
-syvl.org
-#+end_src
-
-* index.nix
-
-#+begin_src nix :tangle (meq/tangle-path)
-with builtins; with (import (fetchGit {
-    url = "https://github.com/<<username>>/<<username>>";
-    ref = "main";
-})).legacyPackages.${currentSystem}; mkShell {
-    buildInputs = [ PythonPackages.bakery yadm git gnumake fd emacs gnupg git-crypt tailscale tailapi pass ];
-}
-#+end_src
-
-* index.hy
-:PROPERTIES:
-:header-args:hy+: :noweb-ref 0d6044e9-0d98-4d89-adcc-955ad42f0fee
-:ID:       697a3a77-89eb-4408-8cac-a5001e05daa2
-:CUSTOM_ID:       697a3a77-89eb-4408-8cac-a5001e05daa2
-:END:
-
-#+begin_src text :tangle (meq/tangle-path) :shebang "#! /usr/bin/env nix-shell" :exports none
-<<0d6044e9-0d98-4d89-adcc-955ad42f0fee>>
-#+end_src
-
-#+begin_src hy
-#[69509b6b-2e23-4c82-bbe3-0ec2a7dd916e[
-#! nix-shell shell
-#! nix-shell -i hy
-#! nix-shell --option tarball-ttl 0
-]69509b6b-2e23-4c82-bbe3-0ec2a7dd916e]
-#+end_src
-
-#+begin_src hy
-(import bakery)
-(import bakery [chown echo gpg git make nixos-generate-config systemctl tailapi tailscale uname yadm zfs])
-(import click)
-(import os [path listdir chmod getlogin symlink])
-(import pathlib [Path])
-(import stat)
-(import socket)
-(import uuid [uuid4 uuid5])
-
-(defn yes? [ var ] (in (.lower var) (, "y" "yes")))
-(defn dyes? [ var default ] (if (yes? var) default var))
-(defn iyes? [ query ] (yes? (input query)))
-(defn idyes? [ query default ] (dyes? (input query) default))
-(defn no? [ var ] (if (in (.lower var) (, "n" "no")) False var))
-(defn ino? [ query ] (no? (input query)))
-(defn repo-exists [ yadm-repo ]
-      (and (.exists path yadm-repo)
-           (iyes? "Repo already exists! Force clone?")))
-#+end_src
-
-Adapted from [[https://stackoverflow.com/users/180464/eric-frederich][eric.frederich's]] comment [[https://stackoverflow.com/questions/12791997/how-do-you-do-a-simple-chmod-x-from-within-python#comment26692909_12792002][here]]:
-
-#+begin_src hy
-(defn chmod-bootstrap [ bootstrap ] (.chmod bootstrap (| (| (| (.stat bootstrap) (.S_IEXEC stat)) (.S_IXGRP stat)) (.S_IXOTH stat))))
-#+end_src
-
-#+begin_src hy
-#@((.command click)
-   (.option click "-b" "--bootstrap" :prompt "Run yadm bootstrap")
-   (.option click "-i" "--impermanent" :prompt "Root wiped on boot")
-   (.option click "-I" "--initialize-yadm-submodules" :prompt True)
-   (.option click "-I" "--initialize-primary-submodules" :prompt True)
-   (.option click "-Y" "--import-yubikey" :prompt True)
-   (.option click "-y" "--yadm-clone" :prompt True)
-   (.option click "-z" "--zfs-root" :prompt "On a zfs root")
-   (.option click "-p" "--primary-user" :prompt "You're the primary user (or enter another user here)")
-   (.option click "-u" "--user-repo" :prompt "Use the default user repo (or enter another repo path here)")
-   (.option click "-g" "--gpg-key-id" :prompt "Use the default gpg key id (or enter another id, such as the name, email address, etc. here)")
-   (.option click "-t" "--tailscale-domain" :prompt "Use the default Tailscale domain (or enter another one here)")
-   (.option click "-a" "--tailscale-api-key" :prompt "Use the default Tailscale api key (or enter another one here)" :hide-input True :confirmation-prompt True)
-   (.option click "-A" "--tailscale-api-command" :prompt "Use the default Tailscale api command (or enter another one here)")
-   (defn main [ bootstrap
-                impermanent
-                import-yubikey
-                initialize-primary-submodules
-                initialize-yadm-submodules
-                primary-user
-                tailscale-api-command
-                tailscale-api-key
-                tailscale-domain
-                user-repo gpg-key-id
-                yadm-clone
-                zfs-root ]
-         (let [ current-user (getlogin)
-                home (.home Path)
-                username "<<username>>"
-                primary-user (if (yes? primary-user) username (if (iyes? "Current user the primary user: ") current-user primary-user))
-                primary-home (.expanduser path f"~{primary-user}")
-                impermanent (yes? impermanent)
-                worktree (if impermanent
-                            f"/persist/{home}"
-                            home)
-                yadm-clone (yes? yadm-clone)
-                zfs-root (yes? zfs-root)
-                import-yubikey (yes? import-yubikey)
-                initialize-yadm-submodules (yes? initialize-yadm-submodules)
-                initialize-primary-submodules (yes? initialize-primary-submodules)
-                bootstrap (yes? bootstrap)
-                clone-opts { "w" worktree "no-bootstrap" True }
-                submodule-opts { "m/starter-args" (, "update")
-                                 "m/exports" { "GIT_DISCOVERY_ACROSS_FILESYSTEM" 1 }
-                                 "init" True
-                                 "recursive" True
-                                 "remote" True
-                                 "force" True }
-                bootstrap-path (Path f"{home}/.config/yadm/bootstrap")
-                reponame "<<reponame>>"
-                user-repo (dyes? user-repo f"{home}/{reponame}")
-                primary-repo f"{primary-home}/{reponame}"
-                yadm-repo f"{home}/.local/share/yadm/repo.git"
-                hostname (.gethostname socket)
-                dataset f"{hostname}/{primary-user}"
-                gpg-key-id (dyes? gpg-key-id "jeet.ray@syvl.org")
-                tailscale-domain (dyes? tailscale-domain "sylvorg.github")
-                tailscale-api-key (dyes? tailscale-api-key None)
-                tailscale-api-command (dyes? tailscale-api-command "pass show keys/api/tailscale/jeet.ray")
-                tailscale-api-command-split (.split tailscale-api-command)
-                tailscale-api-command-bin (bakery (get tailscale-api-command-split 0))
-                tailscale-api-command-args (cut tailscale-api-command-split 1 None) ]
-              (.bake- gpg :m/stdout-stderr True)
-              (if import-yubikey
-                  (for [line (gpg :card-status True :m/split "\n")]
-                       (if (in "URL" line)
-                           (do (gpg :fetch (get (.split line ": ") 1))
-                               (break))))
-                  (if (setx gpg-key (ino? "Path to gpg private key: "))
-                      (gpg :m/subcommand "import" gpg-key)
-                      (raise (ValueError "Sorry; a gpg key is necessary to continue!"))))
-              (| (echo (+ (.join "" (.split (get (gpg :fingerprint True gpg-key-id :m/list True) 1))) ":6:")) (gpg :import-ownertrust True))
-              (if (not (or (.exists path user-repo) (len (listdir user-repo))))
-                  (do (if (not (or zfs-root (iyes? "Currently using a shared dataset for your central repo, such as via `bcachefs' or `btrfs': ")))
-                          (do (.mkdir (Path primary-repo) :parents True :exist-ok True)
-                              (if (not (and (= current-user primary-user) (.exists path user-repo)))
-                                  (symlink primary-repo user-repo))))
-                      (.clone git f"https://github.com/{username}/{username}.git" user-repo)
-                      (.remote (git :C user-repo) :m/starter-args (, "set-url") :push True "origin" f"git@github.com:{username}/{username}.git")
-
-                      ;; If I unlock before I update the submodules, I can use `ssh://' urls immediately
-                      (.crypt (git :C user-repo) "unlock")
-                      (.submodule (git :C user-repo) :m/regular-args (, ".password-store") #** submodule-opts)
-
-                      (if (!= (uname :o True :m/str True) "Android")
-                          (if (.exists path "/var/lib/tailscale/tailscaled.state")
-                              (if (not (or (in "tailscale0:" (ifconfig :m/split True))
-                                           (in "tun0:" (ifconfig :m/split True))))
-                                  (if impermanent
-                                      (.up tailscale :hostname (uuid5 (uuid4) (str (uuid4)))
-                                                     :authkey (.create (tailapi :domain tailscale-domain
-                                                                                :recreate-response True
-                                                                                :api-key (or tailscale-api-key
-                                                                                             (tailscale-api-command-bin #* tailscale-api-command-args)))
-                                                                                :ephemeral True
-                                                                                :just-key True
-                                                                                "bootstrap"))
-                                      (.up tailscale :hostname hostname
-                                                     :authkey (.create (tailapi :domain tailscale-domain
-                                                                                :recreate-response True
-                                                                                :api-key (or tailscale-api-key
-                                                                                             (tailscale-api-command-bin #* tailscale-api-command-args)))
-                                                                                :ephemeral (iyes? "Set the ephemeral property for this tailscale authkey: ")
-                                                                                :preauthorized (iyes? "Set the pre-authorized property for this tailscale authkey: ")
-                                                                                :reusable (iyes? "Set the reusable property for this tailscale authkey: ")
-                                                                                :just-key True
-                                                                                (input "Tags to set for this authkey, as a string of tags separated by spaces: ")))))
-                              (raise (ValueError "Sorry; enable the tailscale daemon to continue!"))))
-
-                      (if initialize-primary-submodules
-                          (do (.submodule (git :C user-repo) #** submodule-opts)
-                              (for [ m (.submodule yadm :m/starter-args (, "foreach") :recursive True :m/list True) ]
-                                   (.crypt (git :C (+ user-repo "/" (get (.split m "'") 1))) "unlock" :m/ignore-stderr True))))
-                      (chown :R True f"{primary-user}:{primary-user}" user-repo)))
-              (if yadm-clone
-                  (do (.clone yadm :f (repo-exists home) #** clone-opts user-repo)
-                      (.remote (git :C user-repo) :m/starter-args (, "add") current-user yadm-repo)
-                      (.crypt yadm unlock)
-                      (if initialize-yadm-submodules
-                          (do (if impermanent
-                                  (.gitconfig yadm "core.worktree" worktree))
-                              (.submodule yadm #** submodule-opts)
-                              (for [ m (.submodule yadm :m/starter-args (, "foreach") :recursive True :m/list True) ]
-                                   (.crypt (git :C (+ worktree "/" (get (.split m "'") 1))) "unlock" :m/ignore-stderr True))
-                              (.gitconfig yadm "core.worktree" home)
-                              (make :f f"{worktree}/.emacs.d/makefile" "soft-init")))))
-              (nixos-generate-config :run True)
-              (if bootstrap
-                  (do (chmod-bootstrap bootstrap-path)
-                      ((bakery :program- bootstrap-path) worktree)))
-              (if zfs-root
-                  (do (.set zfs :snapdir "visible" dataset :m/run True)
-                      (.inherit zfs :r True "snapdir" dataset :m/run True))))))
-
-(if (= __name__ "__main__") (main))
-#+end_src
+#+property: header-args:html+ :noweb-ref f3e32608-7200-4808-9d42-59112f32d395
+#+property: header-args:shell+ :noweb-ref f3e32608-7200-4808-9d42-59112f32d395
 
 * index.html
-:PROPERTIES:
-:header-args:shell+: :noweb-ref index.html
-:header-args:html+: :noweb-ref index.html
-:ID:       f3e32608-7200-4808-9d42-59112f32d395
-:CUSTOM_ID:       f3e32608-7200-4808-9d42-59112f32d395
-:END:
-
-Programs necessary for the bootstrap:
-
-#+name: 58b62ef7-d880-4cc4-9d4d-9d0e76983d2f
-#+begin_src text
-yadm git "make gnumake" fd emacs
-#+end_src
 
 #+name: 4751ce0e-6018-4f00-8c6d-89f43c3fb792
 #+begin_src emacs-lisp :eval never-export
-(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+(if (file-exists-p "./README.html") (with-temp-buffer (insert-file-contents "./README.html") (buffer-string)) "")
 #+end_src
 
-#+begin_src text :tangle (meq/tangle-path) :exports none
-<<index.html>>
+#+begin_src text :tangle (meq/tangle-path) :exports none :tangle-mode (identity #o777)
+<<f3e32608-7200-4808-9d42-59112f32d395>>
 #+end_src
 
 This was adapted from [[https://ellipsis.sh/][ellipsis.sh]], raw file [[https://raw.githubusercontent.com/ellipsis/ellipsis/gh-pages/index.html][here]]:
 
 #+begin_src shell
-<<\EOF # This is also a bootstrapping script! Check out <a href="https://index.hy.syvl.org">the `hy' script</a> and <a href="https://index.sh.syvl.org">the `shell' script</a> for more information.
+<<\EOF # This is also a bootstrapping script! Check out <a href="https://bootstrap.syvl.org">the <code>bootstrap</code> program</a> and <a href="https://index.syvl.org">the shell script</a> for more information.
 #+end_src
 
 #+begin_src html
@@ -257,7 +40,9 @@ and [[https://stackoverflow.com/users/2092245/ferhtgoldaraz][ferhtgoldaraz's]] a
 set -eo pipefail
 mkdir -p "$HOME/.local/share/syvl"
 bootstrap="$HOME/.local/share/syvl/bootstrap"
-shell="$HOME/.local/share/syvl/shell"
+flake="$HOME/.local/share/syvl/flake.nix"
+default="$HOME/.local/share/syvl/default.nix"
+lockfile="$HOME/.local/share/syvl/flake.lock"
 #+end_src
 
 Adapted from [[https://unix.stackexchange.com/users/48083/graeme][Graeme's]] answer [[https://unix.stackexchange.com/a/121255/270053][here]],
@@ -272,13 +57,29 @@ fi
 if [ "$curlIndexScript" == "y" ] || [ "$curlIndexScript" == "yes" ]; then
     curl -fsSLo $bootstrap https://raw.githubusercontent.com/sylvorg/sylvorg.github.io/main/index.hy
 fi
-if [ -f "$shell" ]; then
-    read -p $'Curl nix shell file: ' curlShellFile < /dev/tty
+if [ -f "$flake" ]; then
+    read -p $'Curl nix flake: ' curlNixFlake < /dev/tty
 else
-    curlShellFile="yes"
+    curlNixFlake="yes"
 fi
-if [ "$curlShellFile" == "y" ] || [ "$curlShellFile" == "yes" ]; then
-    curl -fsSLo $shell https://raw.githubusercontent.com/sylvorg/sylvorg.github.io/main/index.nix
+if [ "$curlNixFlake" == "y" ] || [ "$curlNixFlake" == "yes" ]; then
+    curl -fsSLo $flake https://raw.githubusercontent.com/sylvorg/sylvorg.github.io/main/flake.nix
+fi
+if [ -f "$lockfile" ]; then
+    read -p $'Curl nix flake lockfile: ' curlNixLockfile < /dev/tty
+else
+    curlNixLockfile="yes"
+fi
+if [ "$curlNixLockfile" == "y" ] || [ "$curlNixLockfile" == "yes" ]; then
+    curl -fsSLo $lockfile https://raw.githubusercontent.com/sylvorg/sylvorg.github.io/main/flake.lock
+fi
+if [ -f "$default" ]; then
+    read -p $'Curl flake-compat default.nix: ' curlNixDefault < /dev/tty
+else
+    curlNixDefault="yes"
+fi
+if [ "$curlNixDefault" == "y" ] || [ "$curlNixDefault" == "yes" ]; then
+    curl -fsSLo $default https://raw.githubusercontent.com/sylvorg/sylvorg.github.io/main/default.nix
 fi
 #+end_src
 
@@ -323,46 +124,18 @@ else
             read -p $'Install dependencies: ' setupDependencies < /dev/tty
             if [ "$setupDependencies" == "y" ] || [ "$setupDependencies" == "yes" ]; then
                 chmod +x $pacapt
-                $pacapt -Syyu yadm git make fd emacs gnupg git-crypt pass python
-                pip install --force-reinstall --upgrade https://github.com/syvlorg/bakery/archive/main.tar.gz requests
-                tailapiGit="$HOME/.local/share/tailapi.git"
-                git clone https://github.com/syvlorg/tailapi.git $tailapiGit || git -C $tailapiGit pull origin main
-                chmod +x $tailapiGit/tailapi.py
+                $pacapt -Syyu yadm git fd emacs gnupg git-crypt pass python assh
+                pip install --force-reinstall --upgrade https://github.com/syvlorg/bakery/archive/main.tar.gz \
+                                                        https://github.com/syvlorg/tailapi/archive/main.tar.gz \
+                                                        requests
                 if [ "$(uname -o)" == "Android" ]; then
-                    ln -sf $tailapiGit/tailapi.py /data/data/com.termux/files/usr/bin/tailapi
+                    ln -sf $(which sh) $(dirname $(which sh))/nix-shell
                 else
                     $pacapt -Syyu tailscale
-                    ln -sf $tailapiGit/tailapi.py /usr/local/bin/tailapi
                 fi
             fi
             hy $bootstrap $@
         fi
     fi
 fi
-#+end_src
-
-* makefile
-
-#+begin_src makefile :tangle (meq/tangle-path)
-.RECIPEPREFIX := |
-.DEFAULT_GOAL := super-push
-
-# Adapted From: https://www.systutorials.com/how-to-get-the-full-path-and-directory-of-a-makefile-itself/
-mkfilePath := $(abspath $(lastword $(MAKEFILE_LIST)))
-mkfileDir := $(dir $(mkfilePath))
-
-et:
-|chmod +x $(mkfileDir)/settings/bin/*
-|$(mkfileDir)/settings/bin/org-export $(mkfileDir)/README.org
-|$(mkfileDir)/settings/bin/org-tangle $(mkfileDir)/README.org
-
-commit:
-|git -C $(mkfileDir) commit --allow-empty-message -am ""
-
-push:
-|git -C $(mkfileDir) push
-
-cpush: commit push
-
-super-push: et cpush
 #+end_src
